{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 89,
  "lineage": "d93d58bf-6cf2-7460-c17c-246bf8bf0bad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "config_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:356315793174:instance/i-00ba51c982b5e6294",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "config-server-profile",
            "id": "i-00ba51c982b5e6294",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ccd516af4a582221"
              }
            ],
            "primary_network_interface_id": "eni-0ccd516af4a582221",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-98-91-220-254.compute-1.amazonaws.com",
            "public_ip": "98.91.220.254",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:356315793174:key/fbd752bc-b649-4947-93e3-ecc95fc1ee51",
                "tags_all": {
                  "Environment": "dev",
                  "Owner": "sathish",
                  "Project": "config-server"
                },
                "throughput": 125,
                "volume_id": "vol-0cceab66c9cc468ee",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d0d604e2bb966ca",
            "tags": {
              "Name": "sathish-config-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sathish-config-server",
              "Owner": "sathish",
              "Project": "config-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065f5ceb0efa9fa32"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "i-00ba51c982b5e6294",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.config_server",
            "aws_iam_role.config_server",
            "aws_key_pair.config_server",
            "aws_security_group.config_server",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.this",
            "data.aws_availability_zones.available",
            "tls_private_key.config_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356315793174:internet-gateway/igw-0bb2eb8bf450f86bb",
            "id": "igw-0bb2eb8bf450f86bb",
            "owner_id": "356315793174",
            "region": "us-east-1",
            "tags": {
              "Name": "config-server-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "config-server-igw",
              "Owner": "sathish",
              "Project": "config-server"
            },
            "vpc_id": "vpc-0ba99ac8b3d6ef9bf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "igw-0bb2eb8bf450f86bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356315793174:route-table/rtb-0f7b051fdfda1b869",
            "id": "rtb-0f7b051fdfda1b869",
            "owner_id": "356315793174",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb2eb8bf450f86bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "config-server-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "config-server-rt",
              "Owner": "sathish",
              "Project": "config-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba99ac8b3d6ef9bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "rtb-0f7b051fdfda1b869",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042bb4aaaa0f7ecc8",
            "region": "us-east-1",
            "route_table_id": "rtb-0f7b051fdfda1b869",
            "subnet_id": "subnet-02d0d604e2bb966ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "rtbassoc-042bb4aaaa0f7ecc8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "config_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356315793174:security-group/sg-065f5ceb0efa9fa32",
            "description": "Allow SSH from trusted IP and config server port 8888",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065f5ceb0efa9fa32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Config server port",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from trusted IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "config-server-sg",
            "name_prefix": "",
            "owner_id": "356315793174",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "config-server-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "config-server-sg",
              "Owner": "sathish",
              "Project": "config-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba99ac8b3d6ef9bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "sg-065f5ceb0efa9fa32",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356315793174:subnet/subnet-02d0d604e2bb966ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d0d604e2bb966ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356315793174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "config-server-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "config-server-subnet",
              "Owner": "sathish",
              "Project": "config-server"
            },
            "vpc_id": "vpc-0ba99ac8b3d6ef9bf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "subnet-02d0d604e2bb966ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356315793174:vpc/vpc-0ba99ac8b3d6ef9bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fc868d7cb2b5f28",
            "default_route_table_id": "rtb-0974a34dfa73d83ac",
            "default_security_group_id": "sg-03e51852ae3680a86",
            "dhcp_options_id": "dopt-024ac6c37960d348a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba99ac8b3d6ef9bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0974a34dfa73d83ac",
            "owner_id": "356315793174",
            "region": "us-east-1",
            "tags": {
              "Name": "config-server-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "config-server-vpc",
              "Owner": "sathish",
              "Project": "config-server"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "356315793174",
            "id": "vpc-0ba99ac8b3d6ef9bf",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}